--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header {
 .voyage {
   color: rgb(255, 255, 255);
   margin-left: 10px;
-  font-size: 35px;
+  font-size: 32px;
 }
 .navbar {
   display: flex;
@@ -106,25 +106,26 @@ header {
 }
 .voyage-img {
   width: 95%;
-  object-fit: cover;
-  max-height: 485px;
 }
 .img-voyage {
   display: flex;
-  justify-content: flex-end;
-  width: 48%;
+  justify-content: center;
+  width: 70%;
+  max-height: 485px;
+  object-fit: cover;
+  align-items: center;
 }
 .hh3 {
   color: #0b739f;
 }
 .voyage-info {
-  max-width: 600px;
+  max-width: 700px;
   width: 70%;
 }
 p {
   font-size: 18px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   div.about-us {
     flex-wrap: wrap;
   }
